--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,1 +1,1 @@
-
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);html{font-size:100%;overflow-y:scroll;-webkit-tap-highlight-color:transparent;-ms-text-size-adjust:100%;-webkit-text-size-adjust:none}
